[project]
name = "vonnegut"
version = "0.1.0"
description = "Data Explorer & Migration Platform"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.0",
    "psycopg[binary]>=3.3.3",
    "psycopg-pool>=3.2.0",
    "aiosqlite>=0.22.1",
    "cryptography>=46.0.5",
    "anthropic>=0.85.0",
    "duckdb>=1.5.0",
    "polars>=1.39.2",
    "pyarrow>=18.0.0",
    "sqlglot>=30.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.26.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vonnegut"]
